tests/compile_errors/json/003_strict_dynamic_add.xr
// 003_strict_dynamic_add.xr
// 错误测试：严格类型不允许通过索引添加新字段
// 期望错误：类型 'Vec2Dyn' 不允许添加字段
type Vec2Dyn = { x: int, y: int }
let v: Vec2Dyn = { "x": 1, "y": 2 }
v["z"] = 3
